# shared-logging

./: README.md  pyproject.toml
src/shared_logging/: config.py  setup.py
tests/: test_config.py
